[package]
name = "ruops"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
sysinfo = "0.29"
bollard = "0.14"  # Docker API client
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
config = "0.13"
lettre = "0.10"  # For email notifications
reqwest = { version = "0.11", features = ["json"] }  # For HTTP notifications (e.g., Slack)
futures-util = "0.3"
